3rd-semester/terraform/vpc.tf
resource "aws_vpc" "altschool-vpc" {
  cidr_block = var.vpc_cidr

  tags = {
    Name = "altschool-vpc"
  }
}
