3rd-semester/terraform/security-groups.tf
resource "aws_security_group" "altschool-allow-ssh-pub" {
  name        = "allow_SSH"
  description = "Allow SSH inbound traffic to bastion"
  vpc_id      = aws_vpc.altschool-vpc.id

  ingress {
    description      = "SSH from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "altschool-allow-ssh"
  }
}

resource "aws_security_group" "altschool-priv-sg" {
  name        = "allow ssh http https"
  description = "Allow ssh http and https inbound traffic to replicas (only from VPC)"
  vpc_id      = aws_vpc.altschool-vpc.id

  ingress {
    description      = "SSH from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = [aws_vpc.altschool-vpc.cidr_block]
    ipv6_cidr_blocks = [aws_vpc.altschool-vpc.ipv6_cidr_block]
  }

  ingress {
    description = "HTTPS from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.altschool-vpc.cidr_block]
    ipv6_cidr_blocks = [aws_vpc.altschool-vpc.ipv6_cidr_block]
  }

  ingress {
    description      = "HTTP from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks = [aws_vpc.altschool-vpc.cidr_block]
    ipv6_cidr_blocks = [aws_vpc.altschool-vpc.ipv6_cidr_block]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "altschool-private-subnet-security-group"
  }
}

resource "aws_security_group" "altschool-allow-web" {
  name        = "allow web"
  description = "Allow web inbound traffic to load balancer"
  vpc_id      = aws_vpc.altschool-vpc.id

  ingress {
    description      = "HTTPS from internet"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description      = "HTTP from internet"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "altschool-allow-web"
  }
}
